--- a/html/pom.xml
+++ b/html/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>com.github.vencent-lu</groupId>
     <artifactId>giants-decorator</artifactId>
-    <version>1.2.0</version>
+    <version>1.2.1-Beta-1</version>
   </parent>
 
   <artifactId>giants-decorator-html</artifactId>
