--- a/spring/pom.xml
+++ b/spring/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>com.github.vencent-lu</groupId>
     <artifactId>giants-decorator</artifactId>
-    <version>1.2.1-Beta-6</version>
+    <version>1.3.0</version>
   </parent>
 
   <artifactId>giants-decorator-spring</artifactId>
